kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/valid/025_weaving_in_kermeta_aspect8.kmt
/* $Id: 025_weaving_in_kermeta_aspect7.kmt,v 1.1 2007/02/16 07:42:36 dvojtise Exp $ */

// Type checking of kermeta weavinf

package weavinginvalidtest7;

require kermeta
require "025_weaving_in_kermeta_aspect8/025_weaving_in_kermeta_aspect8_baseClass.kmt"

using kermeta::standard


@aspect "true"
class A {
	operation amethod() : A[0..*] is do
		result := OrderedSet<A>.new
	end

}

/* END OF FILE */